--- a/main/templates/module/module_resource_add.html
+++ b/main/templates/module/module_resource_add.html
@@ -107,16 +107,13 @@
         <br>
 
         <div>
-            {{ form.submit( class='btn btn-dark' ) }}
+            {{ form.submit( class='btn btn-submit' ) }}
         </div>
         <br>
     </form>
 </div>
 
 <br>
-
-<!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 {# reference: https://stackoverflow.com/a/7507471 #}
 <script type="text/javascript">
