other web page updates

--- a/main/templates/includes/header/logged_out_li.html
+++ b/main/templates/includes/header/logged_out_li.html
@@ -4,6 +4,11 @@
     </a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" class="privacy-btn" href="{{ url_for('privacy') }}">
+        Privacy
+    </a>
+</li>
+<li class="nav-item">
     <a class="nav-link" class="login-btn" href="{{ url_for('users.login') }}">
         Login
     </a>
