--- a/main/templates/includes/footer.html
+++ b/main/templates/includes/footer.html
@@ -1,5 +1,9 @@
-<div class="container-fluid bg-light">
-    <div class="container py-5">
+<footer class="bg-light">
+    <div class="d-none d-sm-block position-absolute top-50 start-50 translate-middle">
         Student Focus © Alex Deverson, 2023
     </div>
-</div>
+
+    <div class="container d-xs-block d-sm-none text-center" style="padding-top: 3vh;">
+        Student Focus © Alex Deverson, 2023
+    </div>
+</footer>
