--- a/main/templates/includes/header/header.html
+++ b/main/templates/includes/header/header.html
@@ -3,7 +3,7 @@
     - https://getbootstrap.com/docs/5.2/components/navbar/#nav [date accessed: 25 March 2023]
     - https://getbootstrap.com/docs/5.2/layout/grid/ [date accessed: 25 March 2023]
 #}
-<header>
+<header style="height: 5vh;">
     <nav class="navbar navbar-expand-lg bg-light d-none d-lg-block">
         <div class="container-fluid">
             <div class="row">
