--- a/main/templates/module/module_single.html
+++ b/main/templates/module/module_single.html
@@ -27,8 +27,12 @@
     <div class="col pe-4">
         <h3>Questions</h3>
     </div>
-    <div class="">
+    <div class="text-end">
+        {% if following_module %}
         <a href="{{ url_for('modules.module_question_add', module_id = module.id) }}" class="btn btn-secondary">Post a Question</a>
+        {% else %}
+        <h4 class="text-danger">Subscribe to this module to interact</h4><a href="{{ url_for('modules.module_add_sub', module_id = module.id) }}" class="btn btn-success">Subscribe</a>
+        {% endif %}
     </div>
 </div>
 
@@ -158,16 +162,22 @@
             </div>
         </div>
 
+        {% if following_module %}
         <div id="inputs">
             <div id="inputs_inner" class="pt-3 d-flex">
                 <input type="text" placeholder="Message" name="message" id="message-field" aria-label="message input box" class="form-control rounded me-2" required>
                 <button type="button" name="send" id="send-btn" onclick="sendMessage()" aria-label="submit message" class=""><i class="fa-solid fa-paper-plane"></i></i></button>
             </div>
-
+            
             <span id="error_message" style="color: red;"></span>
         </div>
-    </div>
-        
+        {% else %}
+        <div class="">
+            <br>
+            <span class="text-danger" style="font-size: 1.5rem; font-weight: 500;">Subscribe to this module to interact </span> <a href="{{ url_for('modules.module_add_sub', module_id = module.id) }}" class="btn btn-success">Subscribe</a>
+        </div>
+        {% endif %}
+    </div>  
 </div>
 <br>
 <br>
@@ -180,8 +190,12 @@
     <div class="col pe-4">
         <h3>Resources</h3>
     </div>
-    <div class="">
+    <div class="text-end">
+        {% if following_module %}
         <a href="{{ url_for('modules.module_resource_add', module_id = module.id) }}" class="btn btn-secondary">Add a resource</a>
+        {% else %}
+        <h4 class="text-danger">Subscribe to this module to interact</h4><a href="{{ url_for('modules.module_add_sub', module_id = module.id) }}" class="btn btn-success">Subscribe</a>
+        {% endif %}
     </div>
 </div>
 
@@ -289,21 +303,24 @@ This is for resources such as:
         <div class="col pe-4">
             <h3>Students following this module</h3>
         </div>
+
         <div class="">
+
         </div>
     </div>
 
     <div class="text-center">
         <div id="messages" class="scrollarea bg-light rounded p-5" style="max-height: 20vh;">
-        {% for student in module.thread.following_user %}
-        <div class="pb-2">
-            {% if student == current_user %}
-            <span class="text-danger">YOU</span>
-            {% else %}
-            <span>{{ student.username | upper }}</span>
-            {% endif %}
+            {% for student in module.thread.following_user %}
+            <div class="pb-2">
+                {% if student == current_user %}
+                <span class="text-danger">YOU</span>
+                {% else %}
+                <span>{{ student.username | upper }}</span>
+                {% endif %}
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 </div>
 
