forgot to connect the socket on load

--- a/main/templates/module/module_single.html
+++ b/main/templates/module/module_single.html
@@ -358,8 +358,19 @@ Infomation from: <a href="https://data.cardiff.ac.uk/legacy/grails/module/{{ mod
     let total_pages = 2
 
     let message_id_list = []
+    
+    socket.connect()
 
     socket.on('connect', () => {
+        socket.emit('room-connect', {
+            'user': `${user_id}`,
+            'room': `${thread_id}`
+        });
+            
+        get_messages()
+    });
+
+    /*socket.on('connect', () => {
         socket.emit('room-connect', {
             'user': `${user_id}`,
             'room': `${thread_id}`
@@ -371,7 +382,7 @@ Infomation from: <a href="https://data.cardiff.ac.uk/legacy/grails/module/{{ mod
 
         // scrollDown()
         // }
-    });
+    });*/
 
     socket.on('message', (data) => {
         if ($('#no-messages-here')) {
