--- a/main/templates/social/social_message_thread.html
+++ b/main/templates/social/social_message_thread.html
@@ -47,7 +47,7 @@
 
     let message_id_list = []
     
-    socket.connect()
+    socket.connect();
 
     socket.on('connect', () => {
         socket.emit('room-connect', {
@@ -55,7 +55,7 @@
             'room': `${thread_id}`
         });
             
-        get_messages()
+        get_messages();
     });
 
     socket.on('message', (data) => {
