--- a/main/templates/social/social_message_thread.html
+++ b/main/templates/social/social_message_thread.html
@@ -46,16 +46,17 @@
     let total_pages = 2
 
     let message_id_list = []
-    
-    socket.connect();
+
+    $( document ).ready(() => {  
+        get_messages();  
+        socket.connect();
+    });
 
     socket.on('connect', () => {
         socket.emit('room-connect', {
             'user': `${user_id}`,
             'room': `${thread_id}`
         });
-            
-        get_messages();
     });
 
     socket.on('message', (data) => {
